K8s/catalogue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue
spec:
  replicas: 2
  selector:
    matchLabels: { app: catalogue }
  template:
    metadata: { labels: { app: catalogue } }
    spec:
      containers:
      - name: catalogue
        image: mrprateek12/devflix-catalogue:latest
        ports: [ { containerPort: 5000 } ]
        env: [ { name: MONGO_URI, value: "mongodb://mongo:27017/devflix" } ]
---
apiVersion: v1
kind: Service
metadata: { name: catalogue }
spec:
  selector: { app: catalogue }
  ports: [ { port: 5000, targetPort: 5000 } ]
